--- a/stylesheet/labelSheet.css
+++ b/stylesheet/labelSheet.css
@@ -1,8 +1,11 @@
 QWidget {
     background: rgb(249, 237, 220);
-    border-top-left-radius: 20px;
-    border-bottom-left-radius: 20px;
+    border-top-left-radius: 10px;
+    /*border-top-left-radius: 20px;*/
+    border-bottom-left-radius: 10px;
+    /*border-bottom-left-radius: 20px;*/
     font-family: "Ink Free";
-    font-size: 40px;
+    font-size: 16px;
+    /*font-size: 32px;*/
     font-weight: bold;
 }
